refactor: cascade 문제 해결,